# Plymouth_Uni_Projects

./: README.md
COMP1000-Software_Engineering_1/: README.md
COMP1000-Software_Engineering_1/C1W2_Assessment/AI_project/: CMakeLists.txt  main.cpp
COMP1000-Software_Engineering_1/C1W2_Assessment/AI_project/include/: Enemy.h  MazeGeneration.h  PlayerMovement.h  Position.h
COMP1000-Software_Engineering_1/C1W2_Assessment/AI_project/src/: Enemy.cpp  MazeGeneration.cpp  PlayerMovement.cpp
COMP1000-Software_Engineering_1/C1W2_Assessment/AI_project_v2/: CMakeLists.txt  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Maze.cpp  Maze.h  Player.cpp  Player.h  Puzzle.cpp  Puzzle.h  main.cpp
COMP1000-Software_Engineering_1/C1W2_Assessment/Maze generation/: CMakeLists.txt  main.cpp
COMP1000-Software_Engineering_1/C1W2_Assessment/Project/: CMakeLists.txt  README.txt  main.cpp
COMP1000-Software_Engineering_1/C1W2_Assessment/Project_test/: CMakeLists.txt  main.cpp
COMP1000-Software_Engineering_1/Lab 1 - tasks/task 1 - declaring and initialising variables/: CMakeLists.txt
COMP1000-Software_Engineering_1/Lab 1 - tasks/task 2 - arithmitic operations with user input/: CMakeLists.txt  main.cpp
COMP1000-Software_Engineering_1/Lab 10 - tasks/Task 3 - Composition in OOP/: main.cpp  (+1 more)
COMP1004-Computing_Practice-Website/: README.md
COMP1004-Computing_Practice-Website/V1_Website/: index.html  script.js  style.css
COMP1004-Computing_Practice-Website/V2_Website/: data.json  index.html  script.js  style.css
COMP1004-Computing_Practice-Website/V3_Website/: index.html  script.js  style.css
(+97 files in other folders)
